# vicon2lcm

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup_global_lcm.sh
lcm_msgs/: twist3D.lcm  vicon_state.lcm
src/: lcm_vicon_bridge.cpp  vicon_state_receiver.cpp
vicon_msgs/: vicon_state_t.hpp
